# BLOX

./: db.sqlite3  index.html  pyproject.toml
blox/: asgi.py  settings.py  urls.py  wsgi.py
blox_main/: apps.py  views.py
blox_main/templates/blox_main/: index.html
